--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.11.0",
     "element-plus": "^2.7.6",
+    "splitpanes": "^3.1.5",
+    "unocss-preset-scrollbar": "^0.3.1",
     "vue": "^3.4.29",
     "vue-codemirror": "^6.1.1"
   },
