--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@codemirror/view": "^6.29.1",
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.11.0",
+    "animate.css": "^4.1.1",
     "element-plus": "^2.7.6",
     "splitpanes": "^3.1.5",
     "vue": "^3.4.29",
